# Storm-old

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  bytecode.sasm  contributing.md  test.storm
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
Storm/: storm.cc  storm.h  util.cc
Windows/: Storm.sln
Windows/Storm/: Storm.vcxproj  Storm.vcxproj.filters
Windows/stormcompiler/: stormcompiler.vcxproj  stormcompiler.vcxproj.filters
Windows/stormrun/: stormrun.vcxproj  stormrun.vcxproj.filters
docs/: CNAME  building.md  bytecode.md  index.md
docs/contributing/: bytecode.md  index.md  style-cpp.md
file/: file.h  read.cc
interpreter/: arithmetic.cc  arithmetic.h  interpreter.cc  interpreter.h  mem.cc
parser/: functions.cc  functions.h  lexer.cc  parser.cc  parser.h  splice.cc  storm_calls.cc  storm_calls.h  svalues.cc  svalues.h
scripts/: readbytecode.py  test.bat  test.sh
src/: storm.cc  storm.h  stormscript.cc  stormscript.h  util.cc
src/file/: file.h  read.cc
src/interpreter/: execute.cc  interpreter.cc  interpreter.h  io.cc  string.cc
src/parser/: compile.cc  data.cc  (+4 more)
tests/: test_call_inline.storm  test_comment.storm  test_function_args.storm  test_function_args_multiple.storm  test_function_inline_args.storm  test_function_multiple.storm  test_function_noargs.storm  test_function_return.storm  test_import.storm  test_inlineread.storm  test_math.storm  test_math_assign.storm  test_read.storm  test_vars_declaration.storm  test_vars_set.storm  test_vars_write.storm  test_write.storm
